alert url (success type) readability fix
not even sure this is needed, I don't think there's ever a url on these green popups but it's visible now

--- a/octoprint_cyborgtheme/static/css/overrides.css
+++ b/octoprint_cyborgtheme/static/css/overrides.css
@@ -196,3 +196,7 @@ select[multiple] {
 .ui-pnotify .alert-info a {
     color: #c09853;
 }
+
+.ui-pnotify .alert-success a {
+    color: #79ff92;
+}
